2006-09-17 05:20  pbrook

	* hw/esp.c: SPARC SCSI fixes.

2006-09-10 21:25  bellard

	* Makefile.target, vl.h, hw/cs4231.c, hw/sun4m.c: dummy cs4231
	  audio driver for sun4m (Blue Swirl)

2006-09-10 16:39  pbrook

	* vl.c: Avoid (repeatedly) trying to read stdin after it has
	  closed.

2006-09-10 01:35  pbrook

	* linux-user/syscall_defs.h: ARM 64-bit host fix.

2006-09-09 16:36  pbrook

	* target-arm/helper.c: Arm MMU fix (Justin Fletcher).

2006-09-09 14:17  bellard

	* hw/slavio_serial.c: allow host serial port usage (Blue Swirl)

2006-09-09 14:03  bellard

	* block-vvfat.c: vvfat fixes (Roger Lathrop)

2006-09-09 13:38  bellard

	* hw/slavio_serial.c: fix serial irq logic (Blue Swirl)

2006-09-09 13:35  bellard

	* hw/slavio_serial.c: added mouse protocol (Igor Kovalenko)

2006-09-09 13:31  bellard

	* hw/tcx.c: more correct display functions

2006-09-09 13:10  bellard

	* vl.c: two stop bits support

2006-09-03 21:48  bellard

	* vl.h, hw/pcnet.c, hw/sparc32_dma.c: better PCNET endianness
	  support

2006-09-03 19:10  bellard

	* qemu-doc.texi: typo

2006-09-03 19:09  bellard

	* target-i386/translate.c: multi byte nop support

2006-09-03 18:40  bellard

	* hw/pcnet.c: endianness fixes

2006-09-03 18:09  bellard

	* Makefile.target, vl.h, hw/esp.c, hw/iommu.c, hw/sparc32_dma.c,
	  hw/sun4m.c: Separate the DMA controllers - Convert ESP to new DMA
	  methods (Blue Swirl)

2006-09-03 18:07  bellard

	* hw/: lance.c, pcnet.c: initial sparc32 lance and pcnet merge

2006-09-03 16:10  bellard

	* qemu-doc.texi, vl.c: allow disabling of serial or parallel
	  devices (Stefan Weil)

2006-09-03 14:08  pbrook

	* block-raw.c, vl.c, vl.h: Flush IO requests before savevm
	  (original patch by Blue Swirl).

2006-08-29 06:52  pbrook

	* vl.h, hw/esp.c, hw/iommu.c, hw/lsi53c895a.c, hw/scsi-disk.c,
	  hw/sun4m.c, hw/usb-msd.c: SCSI TCQ support.

2006-08-26 20:00  bellard

	* hw/serial.c: 16 bit divider

2006-08-24 22:36  bellard
